# AWS_langgrapgh_deployment

./: Dockerfile  README.md  bot_server.py  bot_server_final.py  get_dependecies.py  new.yaml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
Assets/: New Microsoft Word Document.docx  ~$w Microsoft Word Document.docx
agentic_rag_langgrapgh/: auth.py  embedding.py  faiss_index.py  graph_builder.py  groq_llm.py  laggrapgh_ui.py  server.py  tools.py  utils.py  vis_grapgh.py
faiss_index_zoology_book/: index.faiss  index.pkl
