[project]
name = "aws-bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.0",
    "certifi>=2025.6.15",
    "cryptography>=45.0.5",
    "datasets>=4.0.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "grandalf>=0.8",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "openai>=1.93.0",
    "pillow>=11.3.0",
    "pypdf>=5.7.0",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "qdrant-client>=1.15.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
